[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-gate-bridge"
version = "0.0.1"
description = "Golden Gate Bridge with Llama-3-70B"
authors = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "modal==0.62.201",
    "wandb==0.16.3",
    "rich==13.7.1",
    "pydantic~=2.0.0",
    "fastapi==0.108.0",
    "gradio~=3.50.2",
    "umap-learn"
]

[project.urls]
Homepage = "https://github.com/gao-hongnan/golden-gate-bridge"
Issues = "https://github.com/gao-hongnan/golden-gate-bridge/issues"

[project.optional-dependencies]
dev = [
    "bandit==1.7.5",
    "black==23.10.1",
    "colorama==0.4.6",
    "cookiecutter==2.4.0",
    "coverage==7.3.2",
    "ghp-import==2.1.0",
    "ipywidgets==7.7.2",
    "isort==5.12.0",
    "jupytext==1.15.2",
    "jupyter-book==0.15.1",
    "mypy==1.7.1",
    "pandas-stubs==2.1.4.231227",
    "pre-commit==3.6.0",
    "pytest==7.4.3",
    "pytest-mock==3.12.0",
    "ruff==0.1.7",
    "sphinx-proof==0.1.3",
    "sphinx-sitemap==2.5.1",
    "types-requests==2.31.0.10",
    "types-tqdm==4.66.0.5",
    "typeguard==4.1.5",
]

[tool.setuptools.packages.find]
include = ["golden_gate_bridge*"]

# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.isort]
profile = "black"
line_length = 120
verbose = false
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]
skip_glob = [
    "**/venv_*",
    "venv",
    ".venv",
]

[tool.black]
line-length = 120           # NOTE: in sync with ruff
target-version = ['py311']   # NOTE: in sync with ruff
verbose = false
diff = false
color = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
